--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Burak Yüce
+name: Burak Yüce gg
 
 # Short bio or description (displayed in the header)
 description: A man who pursues yourself
